# platform-py

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  PLAN.md  README.md  config.yaml  db_test.py  docker-compose.yml  main.py  moon.yml  pyproject.toml  repomix-output.xml  repomix.config.json  requirements.txt
db/migrations/: 0001_events.sql  0002_events_indexes.sql
deployment/: fabfile.py  schema.sql
docs/: BetaPlan.md  Nodes.md  Platform-System-v0.1.md  SystemDocs.md
docs/adr/: 002-redis-read-models.md
performance/: benchmark.py
platform/: config.py  dependencies.py  rust_bindings.py  services.py
platform/agent/: coordination.py
platform/api/: __init__.py  intent.py  strategy.py
platform/chain_monitor/: __init__.py  watcher.py
platform/core/execution/: __init__.py  planner.py
platform/core/intent/: manager.py
platform/core/market/: adapter.py
platform/governance/: gateway.py  policy.py
platform/market/: __init__.py  adapters.py
platform/monitoring/: __init__.py  metrics.py
platform/risk/: circuit_breaker.py  engine.py
platform/settlement/: __init__.py  netting.py
platform/state/: coordinator.py
platform/strategies/: __init__.py
platform/strategies/examples/: __init__.py  momentum.py
platform/streaming/: __init__.py  event_stream.py
platform/types/: __init__.py  intent.py  rust_bridge.py
platform_py/: __init__.py  app.py  config.py  dependencies.py  rust_bindings.py  services.py  setup_event_loop.py
platform_py/agent/: __init__.py  framework.py
platform_py/api/: __init__.py  intent.py  stream.py
platform_py/chain_monitor/: watcher.py
platform_py/core/: __init__.py
platform_py/core/execution/: orchestrator.py  planner.py  venue_manager.py
platform_py/core/intent/: __init__.py  manager.py  prioritizer.py  processor.py  validator.py
platform_py/core/market/: __init__.py  uniswap_v3.py
platform_py/governance/: __init__.py
platform_py/risk/: __init__.py  engine.py
platform_py/settlement/: manager.py
platform_py/state/: __init__.py  coordinator.py  reconciliation.py
platform_py/strategies/: base.py
platform_py/strategies/examples/: momentum.py
platform_py/streaming/: event_stream.py
platform_py/types/: __init__.py  common.py  envelope.py  events.py  intent.py  rust_bridge.py
scripts/: migrate.py
src/: chain_monitor.rs  execution.rs  lib.rs  market_data.rs  repomix-output.xml  transaction.rs
tests/: conftest.py  test_rust_bindings.py
tests/unit/market/: test_uniswap_v3.py
tests/unit/risk/: test_engine.py
tests/unit/types/: test_asset_spec.py  test_envelope.py  test_intent.py  test_order_book.py
