[package]
name = "platform_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "platform_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module", "abi3-py39"] }
tokio = { version = "1.42.0", features = ["full"] }
## Migrate away from ethers & rlp to the Alloy ecosystem.
## `alloy-consensus` provides Ethereum transaction types,
## `alloy-rlp` handles RLP decoding, and `alloy-primitives` provides
## primitive types like U256, Bytes, B256, Address. Enable the `k256`
## feature on `alloy-consensus` to recover signers.
alloy-consensus = { version = "1.0.25", features = ["k256"] }
alloy-primitives = "1.2.0"
alloy-rlp = "0.3.9"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.11", features = ["v4"] }

# High-performance data structures
dashmap = "6.1"
crossbeam = "0.8"
parking_lot = "0.12"

# Web3 and crypto
hex = "0.4"
sha3 = "0.10"
once_cell = "1.18"

# Async runtime
futures = "0.3"
async-trait = "0.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

# Build Instructions:
# For development: maturin develop
# For release: maturin develop --release
# Or use make commands: make build (release) or make build-debug
